stop overlapping on generation

--- a/assignment/box_collision/assets/css/style.css
+++ b/assignment/box_collision/assets/css/style.css
@@ -1,13 +1,12 @@
 *{
 	margin:0;
 	padding:0;
-	box-sizing: border-box;
 }
 
 #container {
 	width: 1000px;
 	height: 500px;
 	border: 1px solid #ccc;
+	margin:20px auto;
 	position:relative;
-	margin:50px auto
 }
